--- a/generate_tsakonian_translation.ipynb
+++ b/generate_tsakonian_translation.ipynb
@@ -22,8 +22,9 @@
    },
    "source": [
     "**Instructions:**\n",
+    "* Run the setup cell. This will take around 5 minutes, since it will install the necessary components. This only needs to be ran once per session.\n",
     "* Change the Greek sentence to translate.\n",
-    "* Run code below. This might take some time depending on the sentence length.\n",
+    "* Run the execution cell code below. This might take some time depending on the sentence length.\n",
     "\n",
     "**This is a proof of concept, accuracy in translations should not be expected.** Further source data, training and testing is needed.\n",
     "\n",
@@ -58,7 +59,8 @@
    },
    "outputs": [],
    "source": [
-    "# This might take a while\n",
+    "# Setup cell\n",
+    "# This can take around 5 minutes\n",
     "%pip install llama-cpp-python\n",
     "from llama_cpp import Llama\n",
     "\n",
@@ -77,8 +79,16 @@
    "outputs": [],
    "source": [
     "# Set Greek sentence\n",
-    "greek_sentence = \"Πού είναι το παιδί μου;\"\n",
-    "\n",
+    "greek_sentence = \"Πού είναι το παιδί μου;\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Execution cell: generate translation\n",
     "response = llm.create_chat_completion(\n",
     "\tmessages = [\n",
     "\t\t{\n",
