--- a/generate_tsakonian_translation.ipynb
+++ b/generate_tsakonian_translation.ipynb
@@ -79,7 +79,8 @@
    "outputs": [],
    "source": [
     "# Set Greek sentence\n",
-    "greek_sentence = \"Πού είναι το παιδί μου;\""
+    "# @markdown Set the sentence you want to translate.\n",
+    "GREEK_SENTENCE = \"Πού είναι το παιδί μου;\" # @param {type:\"string\"}"
    ]
   },
   {
@@ -93,7 +94,7 @@
     "\tmessages = [\n",
     "\t\t{\n",
     "\t\t\t\"role\": \"user\",\n",
-    "\t\t\t\"content\": f\"Translate the following sentence from Greek to Tsakonian: {greek_sentence}\"\n",
+    "\t\t\t\"content\": f\"Translate the following sentence from Greek to Tsakonian: {GREEK_SENTENCE}\"\n",
     "\t\t}\n",
     "\t],\n",
     "    temperature = 0\n",
