Adding tsakonian app

--- a/generate_tsakonian_translation_local.ipynb
+++ b/generate_tsakonian_translation_local.ipynb
@@ -66,9 +66,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "llama_model_loader: loaded meta data with 37 key-value pairs and 292 tensors from models/tyros-v5-8b.Q4_K_M.gguf (version GGUF V3 (latest))\n",
+      "llama_model_loader: Dumping metadata keys/values. Note: KV overrides do not apply in this output.\n",
+      "llama_model_loader: - kv   0:                       general.architecture str              = llama\n",
+      "llama_model_loader: - kv   1:                               general.type str              = model\n",
+      "llama_model_loader: - kv   2:                               general.name str              = Meta Llama 3.1 8B Bnb 4bit\n",
+      "llama_model_loader: - kv   3:                       general.organization str              = Unsloth\n",
+      "llama_model_loader: - kv   4:                           general.finetune str              = bnb-4bit\n",
+      "llama_model_loader: - kv   5:                           general.basename str              = Meta-Llama-3.1\n",
+      "llama_model_loader: - kv   6:                         general.size_label str              = 8B\n",
+      "llama_model_loader: - kv   7:                            general.license str              = apache-2.0\n",
+      "llama_model_loader: - kv   8:                   general.base_model.count u32              = 1\n",
+      "llama_model_loader: - kv   9:                  general.base_model.0.name str              = Meta Llama 3.1 8B Bnb 4bit\n",
+      "llama_model_loader: - kv  10:          general.base_model.0.organization str              = Unsloth\n",
+      "llama_model_loader: - kv  11:              general.base_model.0.repo_url str              = https://huggingface.co/unsloth/Meta-L...\n",
+      "llama_model_loader: - kv  12:                               general.tags arr[str,6]       = [\"text-generation-inference\", \"transf...\n",
+      "llama_model_loader: - kv  13:                          general.languages arr[str,1]       = [\"el\"]\n",
+      "llama_model_loader: - kv  14:                          llama.block_count u32              = 32\n",
+      "llama_model_loader: - kv  15:                       llama.context_length u32              = 131072\n",
+      "llama_model_loader: - kv  16:                     llama.embedding_length u32              = 4096\n",
+      "llama_model_loader: - kv  17:                  llama.feed_forward_length u32              = 14336\n",
+      "llama_model_loader: - kv  18:                 llama.attention.head_count u32              = 32\n",
+      "llama_model_loader: - kv  19:              llama.attention.head_count_kv u32              = 8\n",
+      "llama_model_loader: - kv  20:                       llama.rope.freq_base f32              = 500000.000000\n",
+      "llama_model_loader: - kv  21:     llama.attention.layer_norm_rms_epsilon f32              = 0.000010\n",
+      "llama_model_loader: - kv  22:                 llama.attention.key_length u32              = 128\n",
+      "llama_model_loader: - kv  23:               llama.attention.value_length u32              = 128\n",
+      "llama_model_loader: - kv  24:                          general.file_type u32              = 15\n",
+      "llama_model_loader: - kv  25:                           llama.vocab_size u32              = 128256\n",
+      "llama_model_loader: - kv  26:                 llama.rope.dimension_count u32              = 128\n",
+      "llama_model_loader: - kv  27:                       tokenizer.ggml.model str              = gpt2\n",
+      "llama_model_loader: - kv  28:                         tokenizer.ggml.pre str              = llama-bpe\n",
+      "llama_model_loader: - kv  29:                      tokenizer.ggml.tokens arr[str,128256]  = [\"!\", \"\\\"\", \"#\", \"$\", \"%\", \"&\", \"'\", ...\n",
+      "llama_model_loader: - kv  30:                  tokenizer.ggml.token_type arr[i32,128256]  = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...\n",
+      "llama_model_loader: - kv  31:                      tokenizer.ggml.merges arr[str,280147]  = [\"Ġ Ġ\", \"Ġ ĠĠĠ\", \"ĠĠ ĠĠ\", \"...\n",
+      "llama_model_loader: - kv  32:                tokenizer.ggml.bos_token_id u32              = 128000\n",
+      "llama_model_loader: - kv  33:                tokenizer.ggml.eos_token_id u32              = 128001\n",
+      "llama_model_loader: - kv  34:            tokenizer.ggml.padding_token_id u32              = 128004\n",
+      "llama_model_loader: - kv  35:                    tokenizer.chat_template str              = {% if 'role' in messages[0] %}{% for ...\n",
+      "llama_model_loader: - kv  36:               general.quantization_version u32              = 2\n",
+      "llama_model_loader: - type  f32:   66 tensors\n",
+      "llama_model_loader: - type q4_K:  193 tensors\n",
+      "llama_model_loader: - type q6_K:   33 tensors\n",
+      "llm_load_vocab: special tokens cache size = 256\n",
+      "llm_load_vocab: token to piece cache size = 0.7999 MB\n",
+      "llm_load_print_meta: format           = GGUF V3 (latest)\n",
+      "llm_load_print_meta: arch             = llama\n",
+      "llm_load_print_meta: vocab type       = BPE\n",
+      "llm_load_print_meta: n_vocab          = 128256\n",
+      "llm_load_print_meta: n_merges         = 280147\n",
+      "llm_load_print_meta: vocab_only       = 0\n",
+      "llm_load_print_meta: n_ctx_train      = 131072\n",
+      "llm_load_print_meta: n_embd           = 4096\n",
+      "llm_load_print_meta: n_layer          = 32\n",
+      "llm_load_print_meta: n_head           = 32\n",
+      "llm_load_print_meta: n_head_kv        = 8\n",
+      "llm_load_print_meta: n_rot            = 128\n",
+      "llm_load_print_meta: n_swa            = 0\n",
+      "llm_load_print_meta: n_embd_head_k    = 128\n",
+      "llm_load_print_meta: n_embd_head_v    = 128\n",
+      "llm_load_print_meta: n_gqa            = 4\n",
+      "llm_load_print_meta: n_embd_k_gqa     = 1024\n",
+      "llm_load_print_meta: n_embd_v_gqa     = 1024\n",
+      "llm_load_print_meta: f_norm_eps       = 0.0e+00\n",
+      "llm_load_print_meta: f_norm_rms_eps   = 1.0e-05\n",
+      "llm_load_print_meta: f_clamp_kqv      = 0.0e+00\n",
+      "llm_load_print_meta: f_max_alibi_bias = 0.0e+00\n",
+      "llm_load_print_meta: f_logit_scale    = 0.0e+00\n",
+      "llm_load_print_meta: n_ff             = 14336\n",
+      "llm_load_print_meta: n_expert         = 0\n",
+      "llm_load_print_meta: n_expert_used    = 0\n",
+      "llm_load_print_meta: causal attn      = 1\n",
+      "llm_load_print_meta: pooling type     = 0\n",
+      "llm_load_print_meta: rope type        = 0\n",
+      "llm_load_print_meta: rope scaling     = linear\n",
+      "llm_load_print_meta: freq_base_train  = 500000.0\n",
+      "llm_load_print_meta: freq_scale_train = 1\n",
+      "llm_load_print_meta: n_ctx_orig_yarn  = 131072\n",
+      "llm_load_print_meta: rope_finetuned   = unknown\n",
+      "llm_load_print_meta: ssm_d_conv       = 0\n",
+      "llm_load_print_meta: ssm_d_inner      = 0\n",
+      "llm_load_print_meta: ssm_d_state      = 0\n",
+      "llm_load_print_meta: ssm_dt_rank      = 0\n",
+      "llm_load_print_meta: ssm_dt_b_c_rms   = 0\n",
+      "llm_load_print_meta: model type       = 8B\n",
+      "llm_load_print_meta: model ftype      = Q4_K - Medium\n",
+      "llm_load_print_meta: model params     = 8.03 B\n",
+      "llm_load_print_meta: model size       = 4.58 GiB (4.89 BPW) \n",
+      "llm_load_print_meta: general.name     = Meta Llama 3.1 8B Bnb 4bit\n",
+      "llm_load_print_meta: BOS token        = 128000 '<|begin_of_text|>'\n",
+      "llm_load_print_meta: EOS token        = 128001 '<|im_end|>'\n",
+      "llm_load_print_meta: PAD token        = 128004 '<|finetune_right_pad_id|>'\n",
+      "llm_load_print_meta: LF token         = 128 'Ä'\n",
+      "llm_load_print_meta: EOT token        = 128001 '<|im_end|>'\n",
+      "llm_load_print_meta: EOM token        = 128008 '<|eom_id|>'\n",
+      "llm_load_print_meta: EOG token        = 128001 '<|im_end|>'\n",
+      "llm_load_print_meta: EOG token        = 128008 '<|eom_id|>'\n",
+      "llm_load_print_meta: EOG token        = 128009 '<|eot_id|>'\n",
+      "llm_load_print_meta: max token length = 256\n",
+      "llm_load_tensors: ggml ctx size =    0.14 MiB\n",
+      "llm_load_tensors:        CPU buffer size =  4685.30 MiB\n",
+      "........................................................................................\n",
+      "llama_new_context_with_model: n_ctx      = 512\n",
+      "llama_new_context_with_model: n_batch    = 512\n",
+      "llama_new_context_with_model: n_ubatch   = 512\n",
+      "llama_new_context_with_model: flash_attn = 0\n",
+      "llama_new_context_with_model: freq_base  = 500000.0\n",
+      "llama_new_context_with_model: freq_scale = 1\n",
+      "llama_kv_cache_init:        CPU KV buffer size =    64.00 MiB\n",
+      "llama_new_context_with_model: KV self size  =   64.00 MiB, K (f16):   32.00 MiB, V (f16):   32.00 MiB\n",
+      "llama_new_context_with_model:        CPU  output buffer size =     0.49 MiB\n",
+      "llama_new_context_with_model:        CPU compute buffer size =   258.50 MiB\n",
+      "llama_new_context_with_model: graph nodes  = 1030\n",
+      "llama_new_context_with_model: graph splits = 1\n",
+      "AVX = 1 | AVX_VNNI = 0 | AVX2 = 1 | AVX512 = 0 | AVX512_VBMI = 0 | AVX512_VNNI = 0 | AVX512_BF16 = 0 | FMA = 1 | NEON = 0 | SVE = 0 | ARM_FMA = 0 | F16C = 1 | FP16_VA = 0 | RISCV_VECT = 0 | WASM_SIMD = 0 | BLAS = 0 | SSE3 = 1 | SSSE3 = 1 | VSX = 0 | MATMUL_INT8 = 0 | LLAMAFILE = 1 | \n",
+      "Model metadata: {'general.name': 'Meta Llama 3.1 8B Bnb 4bit', 'general.architecture': 'llama', 'general.type': 'model', 'llama.context_length': '131072', 'general.organization': 'Unsloth', 'general.basename': 'Meta-Llama-3.1', 'general.finetune': 'bnb-4bit', 'general.size_label': '8B', 'general.license': 'apache-2.0', 'general.base_model.count': '1', 'general.base_model.0.name': 'Meta Llama 3.1 8B Bnb 4bit', 'general.base_model.0.organization': 'Unsloth', 'llama.attention.value_length': '128', 'general.base_model.0.repo_url': 'https://huggingface.co/unsloth/Meta-Llama-3.1-8B-bnb-4bit', 'llama.block_count': '32', 'llama.embedding_length': '4096', 'llama.feed_forward_length': '14336', 'llama.attention.head_count': '32', 'tokenizer.ggml.eos_token_id': '128001', 'general.file_type': '15', 'llama.attention.head_count_kv': '8', 'llama.rope.freq_base': '500000.000000', 'llama.attention.layer_norm_rms_epsilon': '0.000010', 'llama.attention.key_length': '128', 'llama.vocab_size': '128256', 'llama.rope.dimension_count': '128', 'tokenizer.ggml.model': 'gpt2', 'tokenizer.ggml.pre': 'llama-bpe', 'general.quantization_version': '2', 'tokenizer.ggml.bos_token_id': '128000', 'tokenizer.ggml.padding_token_id': '128004', 'tokenizer.chat_template': \"{% if 'role' in messages[0] %}{% for message in messages %}{% if message['role'] == 'user' %}{{'<|im_start|>user\\n' + message['content'] + '<|im_end|>\\n'}}{% elif message['role'] == 'assistant' %}{{'<|im_start|>assistant\\n' + message['content'] + '<|im_end|>\\n' }}{% else %}{{ '<|im_start|>system\\n' + message['content'] + '<|im_end|>\\n' }}{% endif %}{% endfor %}{% if add_generation_prompt %}{{ '<|im_start|>assistant\\n' }}{% endif %}{% else %}{% for message in messages %}{% if message['from'] == 'human' %}{{'<|im_start|>user\\n' + message['value'] + '<|im_end|>\\n'}}{% elif message['from'] == 'gpt' %}{{'<|im_start|>assistant\\n' + message['value'] + '<|im_end|>\\n' }}{% else %}{{ '<|im_start|>system\\n' + message['value'] + '<|im_end|>\\n' }}{% endif %}{% endfor %}{% if add_generation_prompt %}{{ '<|im_start|>assistant\\n' }}{% endif %}{% endif %}\"}\n",
+      "Available chat formats from metadata: chat_template.default\n",
+      "Using gguf chat template: {% if 'role' in messages[0] %}{% for message in messages %}{% if message['role'] == 'user' %}{{'<|im_start|>user\n",
+      "' + message['content'] + '<|im_end|>\n",
+      "'}}{% elif message['role'] == 'assistant' %}{{'<|im_start|>assistant\n",
+      "' + message['content'] + '<|im_end|>\n",
+      "' }}{% else %}{{ '<|im_start|>system\n",
+      "' + message['content'] + '<|im_end|>\n",
+      "' }}{% endif %}{% endfor %}{% if add_generation_prompt %}{{ '<|im_start|>assistant\n",
+      "' }}{% endif %}{% else %}{% for message in messages %}{% if message['from'] == 'human' %}{{'<|im_start|>user\n",
+      "' + message['value'] + '<|im_end|>\n",
+      "'}}{% elif message['from'] == 'gpt' %}{{'<|im_start|>assistant\n",
+      "' + message['value'] + '<|im_end|>\n",
+      "' }}{% else %}{{ '<|im_start|>system\n",
+      "' + message['value'] + '<|im_end|>\n",
+      "' }}{% endif %}{% endfor %}{% if add_generation_prompt %}{{ '<|im_start|>assistant\n",
+      "' }}{% endif %}{% endif %}\n",
+      "Using chat eos_token: <|im_end|>\n",
+      "Using chat bos_token: <|begin_of_text|>\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the model\n",
     "from llama_cpp import Llama\n",
@@ -78,6 +218,23 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip freeze > requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "id": "KNXHO6zNC4tj"
    },
@@ -90,9 +247,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "llama_perf_context_print:        load time =    4345.75 ms\n",
+      "llama_perf_context_print: prompt eval time =       0.00 ms /    44 tokens (    0.00 ms per token,      inf tokens per second)\n",
+      "llama_perf_context_print:        eval time =       0.00 ms /    29 runs   (    0.00 ms per token,      inf tokens per second)\n",
+      "llama_perf_context_print:       total time =   12373.77 ms /    73 tokens\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"Translation to Tsakonian: Όνι πορού να κιστέψου έγκεινι π̇' ένι ορούα\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Execution cell: generate translation\n",
     "response = llm.create_chat_completion(\n",
